--- a/cv_react/public/index.html
+++ b/cv_react/public/index.html
@@ -9,7 +9,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
-   
+    <link rel="shortcut icon" href="./media/laptop.svg">
+    <link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet">
+    <link href="/your-path-to-fontawesome/css/brands.css" rel="stylesheet">
+    <link href="/your-path-to-fontawesome/css/solid.css" rel="stylesheet">
+
     <title>Cv React</title>
   </head>
   <body>
